--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs: # basic units of work in a run
         command: |
           make test | tee ${TEST_RESULTS}/go-test.out
 
-    - run: make build # pull and build dependencies for the project
+    - run: make dvizz # pull and build the project
 
     - save_cache: # Store cache in the /go/pkg directory
         key: go-mod-v1-{{ checksum "go.sum" }}
